@@ -4,14 +4,20 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.example.annotation.TimeCheck;
 
+import org.example.dto.post.PostDto;
 import org.example.dto.post.PostWishListCountDto;
+import org.example.dto.wish_list.EmailDto;
 import org.example.entity.Post;
+import org.example.entity.WishList;
 import org.example.repository.PostRepository;
+import org.example.repository.WishListRepository;
 import org.example.service.member.MemberFeign;
 import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -20,6 +26,7 @@ import java.util.stream.Collectors;
 public class SearchService {
     private final PostRepository postRepository;
     private final MemberFeign memberFeign;
+    private final WishListRepository wishListRepository;
 
     @TimeCheck
     public List<String> autoComplete(String word) {
@@ -31,43 +38,47 @@ public class SearchService {
     }
 
     @TimeCheck
-    public Page<PostWishListCountDto> searchPost(String postName, int page, int category_id, char gender, String location) {
-        int pageSize = (page == 0 ? 16 : 8);
+    public Page<PostDto> searchPost(String postName, int page, int category_id, String location,String nickName) {
+        int pageSize;
+        int start;
+        if (page==0) {pageSize=16;start=0;}
+        else{pageSize=8;start=16+(page-1)*8;}
         Pageable pageable = PageRequest.of(page, pageSize, Sort.by(Sort.Direction.ASC, "postName"));
-        List<PostWishListCountDto> resultList = findMorePosts(postName, category_id, location, pageable);
-        if (gender != 'X') {
-            List<String> emaillist = memberFeign.getEmailListByGender(gender);
-            log.info(emaillist.toString());
-            resultList = resultList.stream()
-                    .filter(dto -> emaillist.contains(dto.getEmail()))
-                    .collect(Collectors.toList());
+        List<Post> postsName = postRepository.findAllByPostName(postName);
+        List<PostDto> posts=findMorePosts(postsName,category_id,location);
+        if (nickName!=null) {
+            Optional<EmailDto> email = memberFeign.getEmail(nickName);
+            List<PostDto> wishs = wishListRepository.findAllByEmail(email.get().getEmail()).get().stream().map(WishList::getPost).toList()
+                    .stream().map(PostDto::ToDto).toList();
+            posts.forEach(p -> p.setLike(wishs.contains(p)));
         }
-        log.info(resultList.toString());
-        log.info(String.valueOf(resultList.size()));
-        int start ;
-        int end ;
-        if (page == 0)
-        {
-            start = 0;
-            end = Math.min(11,resultList.size());
-        }
-        else {
-            start = 16 + ( (page -1)*pageSize);
-            end = Math.min(start+pageSize-1, resultList.size());
-        } // 만든, page 번호 잘라내기 입니다.
-        List<PostWishListCountDto> pageContent = resultList.subList(start, end);
-        return new PageImpl<>(pageContent, PageRequest.of(page, pageSize), resultList.size());
+        if(posts.size()<start){start-=8;}
+        if(start>posts.size()){return new PageImpl<>(Collections.emptyList(), pageable, 0);}
+        List<PostDto> pageContent = posts.subList(start, Math.min(start+pageSize-1,posts.size()));
+        return new PageImpl<>(pageContent, PageRequest.of(page, pageSize), posts.size());
+
+
+
+
+
     }
 
-    private List<PostWishListCountDto> findMorePosts(String postName, int category_id, String location, Pageable pageable) {
+    private List<PostDto> findMorePosts( List<Post> postsName,int category_id, String location) {
         if (category_id == 0 && location.equals("X")) {
-            return postRepository.findPostPageByPostName(postName);
+            return postsName.stream().map(PostDto::ToDto).toList();
         } else if (category_id == 0) {
-            return postRepository.findByPostNameAndStateAndLocationOrderByCreateAtDesc(postName, location);
+            return postsName.stream().map(PostDto::ToDto)
+                    .filter(p->p.getLocation().equals(location))
+                    .toList();
         } else if (location.equals("X")) {
-            return postRepository.findByPostNameAndStateAndCategoryIdOrderByCreateAtDesc(postName, category_id);
+            return postsName.stream().map(PostDto::ToDto)
+                    .filter(p->p.getCategory_id()==category_id)
+                    .toList();
         } else {
-            return postRepository.findByPostNameAndStateAndLocationAndCateogryIdOrderByCreateAtDesc(postName, location, category_id);
+            return postsName.stream().map(PostDto::ToDto)
+                    .filter(p-> p.getLocation().equals(location))
+                    .filter(p->p.getCategory_id()==category_id)
+                    .toList();
         }
     }
 }
